# hebrew_wordlists

./: README  README.md  adjectives.txt  all_base_word_forms.txt  all_only_fatverb.txt  anadromes.txt  anadromes_with_all_prefixes.txt  anadromes_with_all_prefixes_with_he_hasheela.txt  anadromes_with_some_prefixes.txt  bible.txt  cc100_intersect_no_fatverb.csv  cc100_intersect_with_fatverb.csv  check.py  csv_fixer.py  gen_base_word_forms.py  gerunds.txt  har_zahav.py  hspell_shem_hapoal.txt  hspell_simple.txt  intersect.py  israel_private_names.txt  israeli_family_names.csv  israeli_family_names.txt  israeli_first_names.txt  israeli_jewish_family_names.csv  israeli_place_names.txt  milot.txt  nouns.txt  nouns_adjectives.txt  palin.py  palin_and_anad.txt  palin_and_anad_with_all_prefixes.txt  palin_and_anad_with_all_prefixes_with_he_hasheela.txt  palin_and_anad_with_some_prefixes.txt  palindromes.txt  palindromes_with_all_prefixes.txt  palindromes_with_all_prefixes_with_he_hasheela.txt  palindromes_with_some_prefixes.txt  prefixes.txt  prefixes_with_he_hasheela.txt  (+9 more)
hspell-1.4/: INSTALL  Makefile.in  PrefixBits.pl  WHATSNEW  binarize-desc.pl  biza-nouns.hif  biza-verbs.hif  configure  configure.in  corlist.c  dict_radix.c  dict_radix.h  extrawords.hif  find_sizes.c  genprefixes.pl  gimatria.c  gzbuffered.h  hash.h  hspell.1  hspell.3  hspell.c  hspell.h  libhspell.c  likelyerrors  linginfo.c  linginfo.h  milot.hif  mk_he_affix.c  multispell  pack-desc.pl  pmerge  specfilter.c  spellinghints  stats  tclHash.c  tclHash.h  wolig.pl  woo  wunzip.c  wzip
hspell-1.4/doc/: niqqudless.odt
hspell-1.4/misc/: install.rdf.pre
hspell-1.4/test/: test1
intersect/: cc100_intersect_no_fatverb.csv  cc100_intersect_with_fatverb.csv  mc4_intersect_no_fatverb.csv  mc4_intersect_with_fatverb.csv
modified_hspell_src/: binarize-desc.pl  dodic.pl  genprefixes.pl  mk_he_affix.c  pmerge  unmunch.sh
palin_and_anad/: anadromes_all_with_fatverb.txt  anadromes_bible.txt  anadromes_cc100.txt  anadromes_israeli_first_names.txt  palin_and_anad_all_with_fatverb.txt  palin_and_anad_all_with_fatverb_with_all_prefixes.txt  palin_and_anad_all_with_fatverb_with_all_prefixes_with_he_hasheela.txt  palin_and_anad_all_with_fatverb_with_some_prefixes.txt  palin_and_anad_bible.txt  palin_and_anad_cc100.txt  palin_and_anad_israeli_first_names.txt  palindromes_all_with_fatverb.txt  palindromes_all_with_fatverb_with_all_prefixes.txt  palindromes_all_with_fatverb_with_some_prefixes.txt  palindromes_bible.txt  palindromes_cc100.txt  palindromes_israeli_first_names.txt
palindromes_anadromes/: anadromes_all_with_fatverb.txt  anadromes_all_with_fatverb_with_all_prefixes.txt  anadromes_all_with_fatverb_with_all_prefixes_with_he_hasheela.txt  anadromes_all_with_fatverb_with_some_prefixes.txt  anadromes_bible.txt  anadromes_cc100.txt  anadromes_cc100_intersect_with_fatverb.txt  anadromes_cc100_intersect_with_fatverb_with_all_prefixes.txt  anadromes_cc100_intersect_with_fatverb_with_all_prefixes_with_he_hasheela.txt  anadromes_cc100_intersect_with_fatverb_with_some_prefixes.txt  anadromes_israeli_first_names.txt  palin_and_anad_all_with_fatverb.txt  palin_and_anad_all_with_fatverb_with_all_prefixes.txt  palin_and_anad_all_with_fatverb_with_all_prefixes_with_he_hasheela.txt  palin_and_anad_all_with_fatverb_with_some_prefixes.txt  palin_and_anad_bible.txt  palin_and_anad_cc100.txt  palin_and_anad_cc100_intersect_with_fatverb.txt  palin_and_anad_cc100_intersect_with_fatverb_with_all_prefixes.txt  palin_and_anad_cc100_intersect_with_fatverb_with_all_prefixes_with_he_hasheela.txt  palin_and_anad_cc100_intersect_with_fatverb_with_some_prefixes.txt  palin_and_anad_israeli_first_names.txt  palin_bigrams_all_with_fatverb.txt  palin_bigrams_bible.txt  palin_bigrams_cc100_intersect_with_fatverb.txt  palin_bigrams_israeli_first_names.txt  palindromes_all_with_fatverb.txt  palindromes_all_with_fatverb_with_all_prefixes.txt  palindromes_all_with_fatverb_with_all_prefixes_with_he_hasheela.txt  palindromes_all_with_fatverb_with_some_prefixes.txt  palindromes_bible.txt  palindromes_cc100.txt  palindromes_cc100_intersect_with_fatverb.txt  palindromes_cc100_intersect_with_fatverb_with_all_prefixes.txt  palindromes_cc100_intersect_with_fatverb_with_all_prefixes_with_he_hasheela.txt  palindromes_cc100_intersect_with_fatverb_with_some_prefixes.txt  palindromes_israeli_first_names.txt
